--- a/index.html
+++ b/index.html
@@ -9,10 +9,90 @@
 </head>
 <body>
     <nav>
-        <img src="" alt="">
+        <a href="/">
+            <img src="./assets/amazon_logo.png" width="100" alt="">
+        </a>
+        <div class="nav-country">
+            <img src="./assets/location_icon.png" height="20" alt="">
+             <div>
+                 <p>Deliver To</p>
+                 <h1>United Kingdom</h1>
+            </div>   
+                
+        </div>
+        <div class="nav-search">
+            <div class="nav-search-category">
+                <p>All</p>
+                <img src="./assets/dropdown_icon.png" height="10px" alt="">
+            </div>
+            <input type="text" class="nav-search-input" placeholder="Search On Amazon" >
+            <img src="./assets/search_icon.png" class="nav-search-icon" alt="">
+        </div>
+        <div class="nav-lang">
+            <img src="./assets/us_flag.png" width="25px" alt="">
+            <p>En</p>
+            <img src="./assets/dropdown_icon.png" width="8px" alt="">
+        </div>
+        <div class="nav-text">
+            <p>Hello, Sign In </p>
+            <h1>Account & Lists <img src="./assets/dropdown_icon.png" width="8px" alt=""></h1>
+        </div>
+        <div class="nav-text">
+            <p>Return</p>
+            <h1>& Orders <img src="./assets/dropdown_icon.png" width="8px" alt=""></h1>
+        </div>
+        <a href="#" class="nav-cart">
+            <img src="./assets/cart_icon.png" width="35px" alt="">
+            <h4>cart</h4>
+        </a>
+
     </nav>
-
-
+    <!-- navbar is end here -->
+        <div class="nav-bottom">
+            <div>
+                <img src="./assets/menu_icon.png" width="25px" alt="">
+                <p>All</p>
+            </div>
+            <p>Today's Deals</p>
+            <p>Customer Services</p>
+            <p>Registry</p>
+            <p>Gift cards</p>
+            <p>Sell</p>
+        </div>
+        <div class="header-slider">
+            <a href="#" class="control_previous">&#8592;</a>
+            <a href="#" class="control_next">&#8594;</a>
+            <ul>
+                <img src="./assets/header1.jpg" class="header-img" alt="">
+                <img src="./assets/header2.jpg" class="header-img" alt="">
+                <img src="./assets/header3.jpg" class="header-img" alt="">
+                <img src="./assets/header4.jpg" class="header-img" alt="">
+                <img src="./assets/header5.jpg" class="header-img" alt="">
+                <img src="./assets/header6.jpg" class="header-img" alt="">
+            </ul>
+        </div>
+        <div class="box-row header-box">
+            <div class="box-col">
+                <h3>Free international Return</h3>
+                <img src="./assets/box1-1.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+            <div class="box-col">
+                <h3>Lunar New Year</h3>
+                <img src="./assets/box1-2.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+            <div class="box-col">
+                <h3>Toy Under $25</h3>
+                <img src="./assets/box1-3.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+            <div class="box-col">
+                <h3>Deals in PCs</h3>
+                <img src="./assets/box1-4.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+        </div>
     <script src="./script.js"></script>
 </body>
 </html>
