--- a/index.html
+++ b/index.html
@@ -130,7 +130,79 @@
                 <img src="./assets/product1-10.jpg" alt="">
             </div>
         </div>
+        <div class="box-row ">
+            <div class="box-col">
+                <h3>Stationery</h3>
+                <img src="./assets/box3-1.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+            <div class="box-col">
+                <h3>Laptops For study</h3>
+                <img src="./assets/box3-2.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+            <div class="box-col">
+                <h3>Office Chair</h3>
+                <img src="./assets/box3-3.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+            <div class="box-col">
+                <h3>Gaming Monitor</h3>
+                <img src="./assets/box3-4.jpg" alt="">
+                <a href="#"> Shop More</a>
+            </div>
+        </div>
 
+            <div class="product-slider-with-price">
+                <h2>Deals under $25</h2>
+                <div class="product">
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-1.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-2.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-3.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-4.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-5.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                    </div>
+                </div>
+            </div>
 
     <script src="./script.js"></script>
 </body>
