--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         <div class="product-slider">
             <h2>Best Seller In Sport & Outdoors</h2>
             <div class="products">
+                <a href="product.html"><img src="./assets/product_img.jpg" alt=""></a>
                 <img src="./assets/product1-1.jpg" alt="">
                 <img src="./assets/product1-2.jpg" alt="">
                 <img src="./assets/product1-3.jpg" alt="">
@@ -155,7 +156,7 @@
 
             <div class="product-slider-with-price">
                 <h2>Deals under $25</h2>
-                <div class="product">
+                <div class="products">
                     <div class="product-card">
                         <div class="product-img-container">
                             <img src="./assets/product2-1.jpg" alt="">
@@ -164,6 +165,7 @@
                             <p>27% Off</p>
                         </div>
                         <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
                     </div>
                     <div class="product-card">
                         <div class="product-img-container">
@@ -173,6 +175,7 @@
                             <p>27% Off</p>
                         </div>
                         <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
                     </div>
                     <div class="product-card">
                         <div class="product-img-container">
@@ -182,6 +185,7 @@
                             <p>27% Off</p>
                         </div>
                         <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
                     </div>
                     <div class="product-card">
                         <div class="product-img-container">
@@ -191,6 +195,7 @@
                             <p>27% Off</p>
                         </div>
                         <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
                     </div>
                     <div class="product-card">
                         <div class="product-img-container">
@@ -200,9 +205,135 @@
                             <p>27% Off</p>
                         </div>
                         <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
                     </div>
+
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-6.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-7.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-8.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-9.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-10.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-11.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img-container">
+                            <img src="./assets/product2-12.jpg" alt="">
+                        </div>
+                        <div class="product-offer">
+                            <p>27% Off</p>
+                        </div>
+                        <p class="product-price">$ <span>14.28</span> list Price:19.78</p>
+                        <h4>This Product Is best for You</h4>
+                    </div>
+
+                    
+
                 </div>
             </div>
+
+
+            <div class="product-slider">
+                <h2>Best Seller In Sport & Outdoors</h2>
+                <div class="products">
+                    <img src="./assets/product1-1.jpg" alt="">
+                    <img src="./assets/product1-2.jpg" alt="">
+                    <img src="./assets/product1-3.jpg" alt="">
+                    <img src="./assets/product1-4.jpg" alt="">
+                    <img src="./assets/product1-5.jpg" alt="">
+                    <img src="./assets/product1-6.jpg" alt="">
+                    <img src="./assets/product1-7.jpg" alt="">
+                    <img src="./assets/product1-8.jpg" alt="">
+                    <img src="./assets/product1-9.jpg" alt="">
+                    <img src="./assets/product1-10.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="box-row ">
+                <div class="box-col">
+                    <h3>Stationery</h3>
+                    <img src="./assets/box3-1.jpg" alt="">
+                    <a href="#"> Shop More</a>
+                </div>
+                <div class="box-col">
+                    <h3>Laptops For study</h3>
+                    <img src="./assets/box3-2.jpg" alt="">
+                    <a href="#"> Shop More</a>
+                </div>
+                <div class="box-col">
+                    <h3>Office Chair</h3>
+                    <img src="./assets/box3-3.jpg" alt="">
+                    <a href="#"> Shop More</a>
+                </div>
+                <div class="box-col">
+                    <h3>Gaming Monitor</h3>
+                    <img src="./assets/box3-4.jpg" alt="">
+                    <a href="#"> Shop More</a>
+                </div>
+            </div>
+
+            <footer>
+                <img src="./assets/amazon_logo.png" width="100" alt="">
+                <p>1996-2024, Amazon.com,inc or its affilates</p>
+            </footer>
 
     <script src="./script.js"></script>
 </body>
