--- a/product.html
+++ b/product.html
@@ -84,8 +84,23 @@
                     Visit The BENGOO Store
                 </p>
                 <div class="product-rating">
-                    
+                    <div>4.3 <img src="./assets/rating_img.png" height="20px" alt=""></div>
+                    <p>104,185 ratings | Search this Page</p>
+                    <p> <span># best seller</span>  in pc game headsets </p>
+                    <h5>10k+ bought in past month</h5>
                 </div>
+                <hr>
+
+                
+                <div class="product-price">
+                    <div>
+                        <p>-35%</p>
+                        <h1>$25.99</h1>
+                    </div>
+                </div>
+                <h5>List Price : $39.99</h5>
+                <p>Get fast , free shipping with amazon prime</p>
+                <p>Free Returns</p>
             </div>
             <div class="product-d-purchase"></div>
         </div>
